--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "downloadjs": "^1.4.7",
+    "firebase": "^7.7.0",
+    "jsonfile": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-with-firebase-auth": "^1.3.0",
+    "write-json-file": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
